Actions
Bug #20572
closedCompilation hangs with nested until
Bug #20572:
Compilation hangs with nested until
Actions
Added by kddnewton (Kevin Newton) over 2 years ago. Updated over 2 years ago.
Since ruby --dump=i,-opt -e 'until while 1; end; end' finishes immediately, it is a bug of optimization.
Applied in changeset git|32a555ea532fb15721ad403e6dce0a2ffc346f12.
[Bug #20572] Abandon if replacing destination is the same