[Bug #20572] Abandon if replacing destination is the same