compile.c
@@ -2972,16 +2972,18 @@ unref_destination(INSN *iobj, int pos)
     if (!lobj->refcnt) ELEM_REMOVE(&lobj->link);
 }
 
-static void
+static bool
 replace_destination(INSN *dobj, INSN *nobj)
 {
     VALUE n = OPERAND_AT(nobj, 0);
     LABEL *dl = (LABEL *)OPERAND_AT(dobj, 0);
     LABEL *nl = (LABEL *)n;
+    if (dl == nl) return false;
     --dl->refcnt;
     ++nl->refcnt;
     OPERAND_AT(dobj, 0) = n;
     if (!dl->refcnt) ELEM_REMOVE(&dl->link);
+    return true;
 }
 
 static LABEL*
@@ -3263,9 +3265,10 @@ iseq_peephole_optimize(rb_iseq_t *iseq, LINK_ELEMENT *list, const int do_tailcal
              *   => in this case, first jump instruction should jump to
              *      LABEL2 directly
              */
-            replace_destination(iobj, diobj);
-            remove_unreachable_chunk(iseq, iobj->link.next);
-            goto again;
+            if (replace_destination(iobj, diobj)) {
+                remove_unreachable_chunk(iseq, iobj->link.next);
+                goto again;
+            }
         }
         else if (IS_INSN_ID(diobj, leave)) {
             /*
@@ -3310,8 +3313,7 @@ iseq_peephole_optimize(rb_iseq_t *iseq, LINK_ELEMENT *list, const int do_tailcal
                  */
                 piobj->insn_id = (IS_INSN_ID(piobj, branchif))
                   ? BIN(branchunless) : BIN(branchif);
-                replace_destination(piobj, iobj);
-                if (refcnt <= 1) {
+                if (replace_destination(piobj, iobj) && refcnt <= 1) {
                     ELEM_REMOVE(&iobj->link);
                 }
                 else {
@@ -3440,7 +3442,7 @@ iseq_peephole_optimize(rb_iseq_t *iseq, LINK_ELEMENT *list, const int do_tailcal
 
             for (;;) {
                 if (IS_INSN(&nobj->link) && IS_INSN_ID(nobj, jump)) {
-                    replace_destination(iobj, nobj);
+                    if (!replace_destination(iobj, nobj)) break;
                 }
                 else if (prev_dup && IS_INSN_ID(nobj, dup) &&
                          !!(nobj = (INSN *)nobj->link.next) &&
@@ -3461,7 +3463,7 @@ iseq_peephole_optimize(rb_iseq_t *iseq, LINK_ELEMENT *list, const int do_tailcal
                      *   dup
                      *   if L2
                      */
-                    replace_destination(iobj, nobj);
+                    if (!replace_destination(iobj, nobj)) break;
                 }
                 else if (pobj) {
                     /*
